RESOLVED FIXED265635
REGRESSION(265596@main): [Cocoa] In-band captions generate large, line-wrapped cues
https://bugs.webkit.org/show_bug.cgi?id=265635
Summary REGRESSION(265596@main): [Cocoa] In-band captions generate large, line-wrappe...
Jer Noble
Reported 2023-12-01 00:47:45 PST
[Cocoa] In-band captions generate large, line-wrapped cues
Attachments
Radar WebKit Bug Importer
Comment 1 2023-12-01 00:47:56 PST
Jer Noble
Comment 2 2023-12-01 00:57:20 PST
EWS
Comment 3 2023-12-01 16:53:15 PST
Committed 271415@main (53b6a4522e45): <https://commits.webkit.org/271415@main> Reviewed commits have been landed. Closing PR #21148 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.