Source/WebCore/html/track/VTTCue.h
@@ -96,18 +96,13 @@ public:
     void applyCSSProperties() override;
     void applyCSSPropertiesWithRegion();
 
-    void setFontSizeFromCaptionUserPrefs(int fontSize) { m_fontSizeFromCaptionUserPrefs = fontSize; }
-
 protected:
     VTTCueBox(Document&, VTTCue&);
 
     RenderPtr<RenderElement> createElementRenderer(RenderStyle&&, const RenderTreePosition&) final;
 
-    int fontSizeFromCaptionUserPrefs() const { return m_fontSizeFromCaptionUserPrefs; }
-
 private:
     WeakPtr<VTTCue> m_cue;
-    int m_fontSizeFromCaptionUserPrefs;
 };
 
 // ----------------------------
